--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
-    <meta charset="ÜTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <title>я ебаламужики</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>hohoho</title>
 <head>
 <body>
-    <p></p>
+   яебу
 <body> 
 </html>
