--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <title>Главная страница</title>
     </head>
 
-    <Bodu>
+    <Body>
         <!-- Привет -->
-    </Bodu>
+        <img src="https://avatars.mds.yandex.net/get-images-cbir/4261943/tvEG0IqtLHBKuC7xCabvEg2513/ocr" width="20%">
+    </Body>
 
     </html>
