--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <Body>
         <!-- Привет -->
-        <img src="https://avatars.mds.yandex.net/get-images-cbir/4261943/tvEG0IqtLHBKuC7xCabvEg2513/ocr" width="20%">
+        <img src="img/CDSgOnqyo5M.jpg" width="20%"> <br>
+        <hr>
+        <img src="img/EY11eBF57Kc.jpg" width="20%"> <br>
+        <hr>
+        <img src="img/V8lw-FJlTn0.jpg" width="20%"> <br>
     </Body>
 
     </html>
