--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
         <meta name="keywords" content ="сайти, html">
         
         <title>Главная страница</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
 
     <Body>
         <!-- Привет -->
-        <img src="img/CDSgOnqyo5M.jpg" width="20%"> <br>
+        <img src="img/CDSgOnqyo5M.jpg" width="20%" title="Клоун" alt="Клоун"> <br>
         <hr>
-        <img src="img/EY11eBF57Kc.jpg" width="20%"> <br>
+        <img src="img/EY11eBF57Kc.jpg" width="20%" title="Котик" alt="Котик"> <br>
         <hr>
-        <img src="img/V8lw-FJlTn0.jpg" width="20%"> <br>
+        <img src="img/V8lw-FJlTn0.jpg" width="20%" title="Аватар" alt="Аватар"> <br>
+
+        
+        <script></script>
     </Body>
 
     </html>
