--- a/index.html
+++ b/index.html
@@ -88,21 +88,16 @@
         <h2>Требуемая компетенция</h2>
 
         <label for="competence">Компетенция</label>
-        <select id="competence">
-          <option>Python</option>
-          <option>Java</option>
-          <option>PHP</option>
-          <option>C++</option>
-          <option>C#</option>
-          <option>JavaScript</option>
-        </select> <br><br>
+        <input type="text" maxlength="4" id="competence"> <br><br>
 
         <label for="grade">Грейд</label>
         <select id="grade"> 
-          <option>Выберите грейд</option>
+          <option>0</option>
           <option>1</option>
           <option>2</option>
           <option>3</option>
+          <option>4</option>
+          <option>5</option>
         </select> <br><br>
 
         <label for="number_of_specialists">Количество специалистов</label>
