--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@
         <h2>Требуемая компетенция</h2>
 
         <label for="competence">Компетенция</label>
-        <input type="text" maxlength="4" id="competence"> <br><br>
+        <select id="competence">
+          <option>python</option>
+          <option>java</option>
+          <option>c++</option>
+          <option>c#</option>
+          <option>note.js</option>
+        </select> <br><br>
 
         <label for="grade">Грейд</label>
         <select id="grade"> 
